[gd_scene load_steps=16 format=3 uid="uid://hb31ymywrq5w"]

[ext_resource type="Script" path="res://scripts/dog_monster.gd" id="1_6bnpr"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_ethex"]
[ext_resource type="Texture2D" uid="uid://b48vifcddpnph" path="res://art/files/dog_sheet.png" id="3_s2eh7"]
[ext_resource type="AudioStream" uid="uid://bkpcgsvhtyuhb" path="res://sounds/432755__xpoki__bark.wav" id="4_37jtf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wnibt"]
shader = ExtResource("2_ethex")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="AtlasTexture" id="AtlasTexture_h6n6n"]
atlas = ExtResource("3_s2eh7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_472mm"]
atlas = ExtResource("3_s2eh7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbmj0"]
atlas = ExtResource("3_s2eh7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ir6"]
atlas = ExtResource("3_s2eh7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pl2h"]
atlas = ExtResource("3_s2eh7")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_coppx"]
atlas = ExtResource("3_s2eh7")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fks8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6n6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_472mm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbmj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ir6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pl2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coppx")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ao2fy"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_qvqpq"]
radius = 16.0

[sub_resource type="Curve" id="Curve_qxqk1"]
_data = [Vector2(0.0168539, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="DogMonster" type="RigidBody2D" groups=["enemy"]]
gravity_scale = 0.0
lock_rotation = true
linear_damp = 10.0
script = ExtResource("1_6bnpr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_wnibt")
sprite_frames = SubResource("SpriteFrames_fks8f")
autoplay = "default"
frame_progress = 0.691786

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(-11, 6)
shape = SubResource("CircleShape2D_ao2fy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 10)
shape = SubResource("CircleShape2D_qvqpq")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 50)
initial_velocity_min = 90.91
initial_velocity_max = 202.02
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_qxqk1")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_37jtf")
volume_db = -8.0

[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
